--- a/client/templates/loading.import.less
+++ b/client/templates/loading.import.less
@@ -1,6 +1,13 @@
 .loading-app {
   .position(absolute, 50%, 50%, auto, auto, 50%);
   .transform(translate3d(50%, -50%, 0));
-  min-width: 160px;
-  max-width: 320px;
+  //min-width: 160px;
+  //max-width: 320px;
+  width: 220px;
+  height: 170px;
+  overflow: hidden;
+}
+
+.loading-apploading-apploading-app img {
+  width: 100%;
 }
