--- a/client/templates/auth-join.html
+++ b/client/templates/auth-join.html
@@ -9,7 +9,7 @@
     <div class="content-scrollable">
       <div class="wrapper-auth">
         <h1 class="title-auth">Join.</h1>
-        <p class="subtitle-auth" >Joining allows you to make private lists</p>
+        <p class="subtitle-auth" >Joining gives you full access</p>
 
         <form>
           {{#if errorMessages}}
