--- a/client/templates/loading.html
+++ b/client/templates/loading.html
@@ -1,3 +1,6 @@
 <template name="appLoading">
-  <img src="/img/logo-todos.svg" class="loading-app" />
+  <div class="loading-app" >
+    <img src="/img/teamwork_pass_the_puzzle_md_wm.gif"  />
+  </div>
+
 </template>
