work on synonyms page

--- a/client/templates/synonyms.html
+++ b/client/templates/synonyms.html
@@ -1,3 +1,22 @@
 <template name="synonyms">
-    Synonyms
+
+    <div class="page lists-show">
+        <nav class="js-title-nav">
+            <h1 class="js-edit-list title-page"><span class="title-wrapper">Synonyms</span> <span class="count-list">1</span></h1>
+
+            <form class="js-todo-new todo-new input-symbol">
+                <input type="text" placeholder="Type to search for words">
+                <span class="icon-add js-todo-add"></span>
+            </form>
+        </nav>
+
+
+        <div class="content-scrollable list-items">
+            <div class="wrapper-message">
+                <div class="title-message">Loading words...</div>
+            </div>
+        </div>
+    </div>
+
+
 </template>
