work on synonyms page

--- a/client/templates/synonyms.html
+++ b/client/templates/synonyms.html
@@ -2,7 +2,12 @@
 
     <div class="page lists-show">
         <nav class="js-title-nav">
-            <h1 class="js-edit-list title-page"><span class="title-wrapper">Synonyms</span> <span class="count-list">1</span></h1>
+
+            <div class="nav-group">
+                <a href="#" class="js-menu nav-item"><span class="icon-list-unordered"></span></a>
+            </div>
+
+            <h1 class="title-page" style="cursor: default;"><span class="title-wrapper">Synonyms</span> <span class="count-list">1</span></h1>
 
             <form class="js-todo-new todo-new input-symbol">
                 <input type="text" placeholder="Type to search for words">
