--- a/client/templates/synonyms.html
+++ b/client/templates/synonyms.html
@@ -39,18 +39,18 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-6 col-md-3">
-                <h2>{{word}}</h2>
+            <div class="col-xs-6 col-md-2">
+                <h2>Word: {{word}}</h2>
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-2">
                 <h5>Question</h5>
                 Find the word that means the same as <b>{{word}}</b>.
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-2">
                 <h5>Synonym</h5>
                 synonym
             </div>
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-2">
                 <h5>Distractors</h5>
                 distractors
             </div>
@@ -59,20 +59,38 @@
 
     <div class="container">
         <hr/>
-        <h4>Synonyms</h4>
-        <div class="row">
-        {{#each synonyms}}
-            <div class="col-xs-6 col-md-3">
-                {{this}}
-            </div>
-        {{/each}}
+        <h4>Existing Questions</h4>
+
+        <div class="row col-md-9">
+            {{#each existingQuestions}}
+                <div class="col-xs-6 col-md-3">
+                    question
+                </div>
+            {{/each}}
         </div>
+
     </div>
 
     <div class="container">
         <hr/>
+        <h4>Synonyms</h4>
+
+        <div class="row col-md-9">
+            {{#each synonyms}}
+                <div class="col-xs-6 col-md-3">
+                    {{this}}
+                </div>
+            {{/each}}
+        </div>
+
+    </div>
+
+
+
+    <div class="container">
+        <hr/>
         <h4>Antonyms</h4>
-        <div class="row">
+        <div class="row col-md-9">
             {{#each antonyms}}
                 <div class="col-xs-6 col-md-3">
                     {{this}}
@@ -87,7 +105,7 @@
             <span id="btnRefresh" class="button-refresh glyphicon glyphicon-refresh" aria-hidden="true"></span>
         </h4>
 
-        <div class="row">
+        <div class="row col-md-9">
             {{#each randomWords}}
                 <div class="col-xs-6 col-md-3">
                     {{word}}
