work on client, lessions, and free-form questions

--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -24,6 +24,10 @@
             {{/if}}
 
             <div class="btns-group-vertical">
+                <a href="Clients" class="btn-secondary">Clients</a>
+            </div>
+
+            <div class="btns-group-vertical">
                 <a href="Synonyms" class="btn-secondary">Synonyms</a>
             </div>
         </section>
