--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -24,11 +24,11 @@
             {{/if}}
 
             <div class="btns-group-vertical">
-                <a href="Clients" class="btn-secondary">Clients</a>
+                <a href="/clients" class="btn-secondary">Clients</a>
             </div>
 
             <div class="btns-group-vertical">
-                <a href="Synonyms" class="btn-secondary">Synonyms</a>
+                <a href="/synonyms" class="btn-secondary">Synonyms</a>
             </div>
         </section>
 
