--- a/client/templates/loading.html
+++ b/client/templates/loading.html
@@ -1,5 +1,5 @@
 <template name="appLoading">
-  <div class="loading-app" >
+  <div class="container container-centered">
     <img src="/img/teamwork_pass_the_puzzle_md_wm.gif"  />
   </div>
 
