--- a/client/templates/clients.html
+++ b/client/templates/clients.html
@@ -1,6 +1,6 @@
 <template name="clients">
 
-    <div class="page lists-show">
+    <div class="container">
         <nav class="js-title-nav">
 
             <div class="nav-group">
