--- a/client/styles.css
+++ b/client/styles.css
@@ -2,4 +2,19 @@
 
 .container-centered {
     text-align: center;
+    background-color: #faba47;
+}
+
+.btn-primary{
+    background-color: #a65c04;
+}
+.btn-primary:hover{
+    background-color: #b9820b;
+}
+
+.link-auth-alt{
+    color: black
+}
+.link-auth-alt:hover{
+    color: blue;
 }
