--- a/client/templates/clients.html
+++ b/client/templates/clients.html
@@ -1,6 +1,9 @@
 <template name="clients">
 
     <div class="container">
+
+        <h1>Clients</h1>
+
         {{#if zero_clients}}
             <div class="wrapper-message">
                 You don't have any clients listed.  Enter one below to get started.
