--- a/client/templates/loading.html
+++ b/client/templates/loading.html
@@ -1,6 +1,5 @@
 <template name="appLoading">
-  <div class="container container-centered">
-    <img src="/img/teamwork_pass_the_puzzle_md_wm.gif"  />
-  </div>
-
+    <div class="loading-app">
+        <img src="/img/teamwork_pass_the_puzzle_md_wm.gif"  />
+    </div>
 </template>
