--- a/client/styles.css
+++ b/client/styles.css
@@ -18,3 +18,21 @@
 .link-auth-alt:hover{
     color: blue;
 }
+
+
+.loading-app {
+    position: absolute;
+    top: 20%;
+    left: 50%;
+    margin-top: -95px;
+    margin-left: -110px;
+    /*.position(absolute, 50%, 50%, auto, auto, 50%);*/
+    /*.transform(translate3d(50%, -50%, 0));*/
+    width: 220px;
+    height: 170px;
+    overflow: hidden;
+}
+
+.loading-apploading-apploading-app img {
+    width: 100%;
+}
