--- a/client/templates/clients.html
+++ b/client/templates/clients.html
@@ -3,7 +3,7 @@
     <div class="container">
         {{#if zero_clients}}
             <div class="wrapper-message">
-                You don't have any clients listed.  Enter one up above to get started.
+                You don't have any clients listed.  Enter one below to get started.
             </div>
         {{/if}}
 
