--- a/client/templates/auth-join.html
+++ b/client/templates/auth-join.html
@@ -1,32 +1,35 @@
 <template name="join">
     <div class="container container-centered">
         <h1 class="title-auth">Join.</h1>
-        <form>
-            {{#if errorMessages}}
-                <div class="list-errors">
-                    {{#each errorMessages}}
-                        <div class="list-item">{{this}}</div>
-                    {{/each}}
+
+        <div class="row">
+            <form class="col-md-4 col-md-offset-4" >
+                {{#if errorMessages}}
+                    <div class="list-errors">
+                        {{#each errorMessages}}
+                            <div class="list-item">{{this}}</div>
+                        {{/each}}
+                    </div>
+                {{/if}}
+
+                <div class="input-symbol  {{errorClass 'email'}} form-group">
+                    <input type="email" name="email" placeholder="Your Email" class="form-control" />
+                    <span class="icon-email" title="Your Email"></span>
                 </div>
-            {{/if}}
 
-            <div class="input-symbol  {{errorClass 'email'}}">
-                <input type="email" name="email" placeholder="Your Email" />
-                <span class="icon-email" title="Your Email"></span>
-            </div>
+                <div class="input-symbol  {{errorClass 'password'}} form-group">
+                    <input type="password" name="password" placeholder="Password" class="form-control" />
+                    <span class="icon-lock" title="Password"></span>
+                </div>
 
-            <div class="input-symbol  {{errorClass 'password'}}">
-                <input type="password" name="password" placeholder="Password" />
-                <span class="icon-lock" title="Password"></span>
-            </div>
+                <div class="input-symbol {{errorClass 'confirm'}} form-group">
+                    <input type="password" name="confirm" placeholder="Confirm Password" class="form-control" />
+                    <span class="icon-lock" title="Confirm Password"></span>
+                </div>
 
-            <div class="input-symbol {{errorClass 'confirm'}}">
-                <input type="password" name="confirm" placeholder="Confirm Password" />
-                <span class="icon-lock" title="Confirm Password"></span>
-            </div>
-
-            <button type="submit" class="btn-primary">Join Now</button>
-        </form>
+                <button type="submit" class="btn btn-primary">Join Now</button>
+            </form>
+        </div>
 
         <a href="{{pathFor 'signin'}}" class="link-auth-alt">Have an account? Sign in</a>
 
