--- a/client/templates/auth-signin.html
+++ b/client/templates/auth-signin.html
@@ -24,7 +24,7 @@
                     <span class="icon-lock" title="Password"></span>
                 </div>
 
-                <button type="submit" class="btn-primary">Sign in</button>
+                <button type="submit" class="btn btn-primary">Sign in</button>
             </form>
         </div>
 
