--- a/client/templates/app-body.html
+++ b/client/templates/app-body.html
@@ -3,7 +3,7 @@
 
         <section>
             <br />
-            <div class="dropdown">
+            <div id="menuMain" class="dropdown">
 
                 <span class="dropdown-toggle btn btn-default"
                       style="cursor: pointer;"
