--- a/client/templates/auth-join.html
+++ b/client/templates/auth-join.html
@@ -7,7 +7,7 @@
                 {{#if errorMessages}}
                     <div class="list-errors">
                         {{#each errorMessages}}
-                            <div class="list-item">{{this}}</div>
+                            <div class="bg-danger" style="margin: 2px;">{{this}}</div>
                         {{/each}}
                     </div>
                 {{/if}}
