--- a/client/styles.css
+++ b/client/styles.css
@@ -58,3 +58,14 @@
     font-style: italic;
     opacity: .4;
 }
+
+.notes_editor{
+    background-color: rgba(0, 0, 0, 0.21);
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    z-index: 1;
+    padding: 50px;
+}
